Add 飛車 and 角行 Moving